organise admin and public - start setup with appli controllers - layout - routes folders - working example on fournisseurs

--- a/app/views/admin/clients/_client.html.erb
+++ b/app/views/admin/clients/_client.html.erb
@@ -4,7 +4,7 @@
 
         <div class="card-title d-flex">
           <div data-turbo="false">
-            <%= link_to client_path(client), class: "text-decoration-none text-dark" do %>
+            <%= link_to admin_client_path(client), class: "text-decoration-none text-dark" do %>
               <%= custom_badge("", "", "", "fw-bold", client.full_name) %>
             <% end %>
           </div>
