--- a/app/views/admin/profiles/show.html.erb
+++ b/app/views/admin/profiles/show.html.erb
@@ -4,4 +4,4 @@
 
 <hr>
 
-<%= return_model_index_button("Retour vers profiles", profiles_path) %>
+<%= return_model_index_button("Retour vers profiles", admin_profiles_path) %>
