--- a/app/views/admin/commandes/_form.html.erb
+++ b/app/views/admin/commandes/_form.html.erb
@@ -2,7 +2,7 @@
 
   <div class="card mx-2 mb-3 p-2 light-beige-colored shadow-sm">
 
-    <%= form_with(model: commande) do |form| %>
+    <%= form_with(model: commande, url: admin_commandes_path) do |form| %>
       <% if commande.errors.any? %>
         <div style="color: red">
           <h2><%= pluralize(commande.errors.count, "error") %> prohibited this commande from being saved:</h2>
