--- a/app/views/admin/profiles/edit.html.erb
+++ b/app/views/admin/profiles/edit.html.erb
@@ -5,6 +5,6 @@
 <br>
 
 <div>
-  <%= link_to "Show this profile", @profile %> |
-  <%= link_to "Back to profiles", profiles_path %>
+  <%#= link_to "Show this profile", admin_profile_path(@profile) %> |
+  <%#= link_to "Back to profiles", admin_profiles_path %>
 </div>
