--- a/app/views/admin/commandes/_footer.html.erb
+++ b/app/views/admin/commandes/_footer.html.erb
@@ -19,6 +19,6 @@
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
     <div class="offcanvas-body">
-        <%= render 'doc_editions/new' %>
+        <%= render 'admin/doc_editions/new' %>
     </div>
 </div>
