--- a/app/views/admin/doc_editions/_new.html.erb
+++ b/app/views/admin/doc_editions/_new.html.erb
@@ -1,7 +1,7 @@
 
-<%= render "doc_editions/form", doc_edition: @doc_edition %>
+<%= render "admin/doc_editions/form", doc_edition: @doc_edition %>
 
 <br>
 
 
-<%= render "doc_editions/synthese", doc_edition: @doc_edition %>
+<%= render "admin/doc_editions/synthese", doc_edition: @doc_edition %>
