--- a/app/views/admin/doc_editions/new.html.erb
+++ b/app/views/admin/doc_editions/new.html.erb
@@ -4,5 +4,5 @@
 <br>
 
 <div>
-  <%= link_to "Back to doc editions", doc_editions_path %>
+  <%= link_to "Back to doc editions", admin_doc_editions_path %>
 </div>
