--- a/app/views/admin/produits/show.html.erb
+++ b/app/views/admin/produits/show.html.erb
@@ -9,4 +9,4 @@
 
 <%= render 'commandes_liees' %>
 
-<%= return_model_index_button("Retour vers produits", produits_path) %>
+<%= return_model_index_button("Retour vers produits", admin_produits_path) %>
