--- a/app/views/admin/tailles/index.html.erb
+++ b/app/views/admin/tailles/index.html.erb
@@ -1,4 +1,4 @@
-<%= bandeau_entete("Tailles", "rulers", @count_tailles, :nom_cont, tailles_path) %>
+<%= bandeau_entete("Tailles", "rulers", @count_tailles, :nom_cont, admin_tailles_path) %>
 
 <%= bloc_nouveau(Taille) %>
 
@@ -7,6 +7,6 @@
     <div id="tailles"> </div> 
 
     <%= turbo_frame_tag :pagination, loading: :lazy, 
-                        src: tailles_path(format: :turbo_stream,
+                        src: admin_tailles_path(format: :turbo_stream,
                         q: params[:q]&.to_unsafe_h) %>
 <% end %>
