--- a/app/views/admin/articles/_article.html.erb
+++ b/app/views/admin/articles/_article.html.erb
@@ -39,17 +39,17 @@
               "data-bs-toggle": "collapse", role: "button", 
               "aria-expanded": "false", "aria-controls": "collapseArticle#{dom_id(article)}" %>
             
-            <%= button_to "", edit_article_path(article), method: :post, 
+            <%= button_to "", edit_admin_article_path(article), method: :post, 
               class: "btn btn-sm btn-secondary bi bi-pencil-square" %>
             
-            <%= button_to "", article, method: :delete,  
+            <%= button_to "", admin_article_path(article), method: :delete,  
               onclick: "return confirm('Confirmer suppression ?');", 
               class: "btn btn-sm btn-danger bi bi-trash" %>
           </div>
         </div>
         
         <div class="mt-3">
-          <%= link_to selection_produit_path(commande: @commande, article: article), 
+          <%= link_to admin_selection_produit_path(commande: @commande, article: article), 
             class: "btn btn-sm btn-warning fw-bold" do %>
             <i class="bi bi-plus-lg"></i>
             <span>Sous-article</span>          
@@ -63,7 +63,7 @@
       <% if article.sousarticles.present? %>
         <h6 class="fw-bold">Sous-articles:</h6>
         <% article.sousarticles.each do |sousarticle| %>
-          <%= render partial: 'sousarticles/sousarticle', locals: { sousarticle: sousarticle } %>
+          <%= render partial: 'admin/sousarticles/sousarticle', locals: { sousarticle: sousarticle } %>
         <% end %>    
       <% end %>
       
