--- a/app/views/admin/categorie_produits/_form.html.erb
+++ b/app/views/admin/categorie_produits/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="card mx-2 my-3 p-2 light-beige-colored shadow-sm">
 
-  <%= form_with(model: categorie_produit) do |form| %>
+  <%= form_with(model: categorie_produit, url: categorie_produit.persisted? ? admin_categorie_produit_path(categorie_produit) : admin_categorie_produits_path, method: categorie_produit.persisted? ? :patch : :post, data: { turbo: true }) do |form| %>
     <% if categorie_produit.errors.any? %>
       <div style="color: red">
         <h2><%= pluralize(categorie_produit.errors.count, "error") %> prohibited this categorie_produit from being saved:</h2>
