--- a/app/views/admin/couleurs/_form.html.erb
+++ b/app/views/admin/couleurs/_form.html.erb
@@ -1,7 +1,7 @@
 
   <div class="card mx-2 mt-3 p-2 light-beige-colored shadow-sm">
 
-    <%= form_with(model: couleur) do |form| %>
+    <%= form_with(model: couleur, url: couleur.persisted? ? admin_couleur_path(couleur) : admin_couleurs_path, method: couleur.persisted? ? :patch : :post, data: { turbo: true }) do |form| %>
       <% if couleur.errors.any? %>
         <div style="color: red">
           <h2><%= pluralize(couleur.errors.count, "error") %> prohibited this couleur from being saved:</h2>
