--- a/app/views/admin/ensembles/_form.html.erb
+++ b/app/views/admin/ensembles/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="card mx-2 mt-3 p-2 light-beige-colored shadow-sm">
 
-  <%= form_with(model: ensemble) do |form| %>
+  <%= form_with(model: ensemble, url: ensemble.persisted? ? admin_ensemble_path(ensemble) : admin_ensembles_path, method: ensemble.persisted? ? :patch : :post, data: { turbo: true }) do |form| %>
     <% if ensemble.errors.any? %>
       <div style="color: red">
         <h2><%= pluralize(ensemble.errors.count, "error") %> prohibited this ensemble from being saved:</h2>
