--- a/app/views/admin/etiquettes/index.html.erb
+++ b/app/views/admin/etiquettes/index.html.erb
@@ -2,7 +2,7 @@
 
 
 <div class="p-2">
-  <%= index_search_form(@q, etiquettes_path, :nom_or_reffrs_or_handle_or_categorie_produit_nom_or_type_produit_nom_or_couleur_nom_or_taille_nom_cont ) %>
+  <%= index_search_form(@q, admin_etiquettes_path, :nom_or_reffrs_or_handle_or_categorie_produit_nom_or_type_produit_nom_or_couleur_nom_or_taille_nom_cont ) %>
 
   <% if session[:selection_etiquettes].present? %>
     <div class="d-flex flex-wrap align-items-center m-2">
@@ -13,7 +13,7 @@
 
       <% end %>
 
-      <%= form_with url: reset_selection_etiquettes_path, method: :post, data: { turbo: false } do |form| %>
+      <%= form_with url: reset_selection_admin_etiquettes_path, method: :post, data: { turbo: false } do |form| %>
         <button type="submit" class="btn text-danger">
           <i class="bi bi-x-circle"></i> 
         </button>
@@ -22,7 +22,7 @@
     </div>
 
     <div class="text-end">
-      <%= link_to generate_pdf_etiquettes_path, target: '_blank', class: "btn btn-danger" do %>
+      <%= link_to generate_pdf_admin_etiquettes_path, target: '_blank', class: "btn btn-danger" do %>
         <span class="fw-bold ms-2"> Edition étiquette</span>
         <i class="bi bi-file-earmark-pdf-fill"></i> 
       <% end %>
@@ -38,7 +38,7 @@
 <div id="etiquettes"> </div> 
 
 <%= turbo_frame_tag :pagination, loading: :lazy, 
-                        src: etiquettes_path(format: :turbo_stream,
+                        src: admin_etiquettes_path(format: :turbo_stream,
                         q: params[:q]&.to_unsafe_h) %>
 <% end %>
 
