--- a/app/views/admin/etiquettes/index.turbo_stream.erb
+++ b/app/views/admin/etiquettes/index.turbo_stream.erb
@@ -1,14 +1,14 @@
 <%# produits infinite scroll pagination %>
 
 <%= turbo_stream.append :etiquettes do %>
-  <%= render partial: 'etiquettes/produit', collection: @produits, as: :produit %>
+  <%= render partial: 'admin/etiquettes/produit', collection: @produits, as: :produit %>
 <% end %>
 
 
 <% if @pagy.next.present? %>
     <%= turbo_stream.replace :pagination do %>
         <%= turbo_frame_tag :pagination, loading: :lazy,
-                            src: etiquettes_path(format: :turbo_stream,
+                            src: admin_etiquettes_path(format: :turbo_stream,
                             page: @pagy.next, q: params[:q]&.to_unsafe_h ) %>
     <% end %>
 
