--- a/app/views/admin/type_produits/_type_produit.html.erb
+++ b/app/views/admin/type_produits/_type_produit.html.erb
@@ -2,7 +2,7 @@
 
   <div class="card d-flex flex-row mx-2 my-3 p-3 light-beige-colored shadow-sm">
     <div data-turbo="false">
-      <%= link_to type_produit.nom, type_produit_path(type_produit), class: "text-dark text-decoration-none" %>
+      <%= link_to type_produit.nom, admin_type_produit_path(type_produit), class: "text-dark text-decoration-none" %>
     </div>
 
     <div class="container-fluid p-0 text-end">
