fix routes and paths for admin part

--- a/app/views/admin/meetings/index.html.erb
+++ b/app/views/admin/meetings/index.html.erb
@@ -1,4 +1,4 @@
-<%= bandeau_entete("Rendez-vous", "calendar", @count_meetings, 
+<%= bandeau_entete("Rendez-vous", "calendar-date", @count_meetings, 
 :nom_or_datedebut_or_datefin_or_lieu_cont, admin_meetings_path) %>
 
 <%= bloc_nouveau(Meeting) %>
