--- a/app/views/admin/pdf_commande/document.html.erb
+++ b/app/views/admin/pdf_commande/document.html.erb
@@ -8,8 +8,8 @@
   <%= "Devis" if @doc_edition.commande.devis? %>
 </h4>
 
-<%= render "pdf_commande/infos" %> <br>
-<%= render "pdf_commande/articles" %> 
-<%= render "pdf_commande/paiements" %> 
-<%= render "pdf_commande/avoirrembs" %> 
-<%= render "pdf_commande/synthese" %> 
+<%= render "admin/pdf_commande/infos" %> <br>
+<%= render "admin/pdf_commande/articles" %> 
+<%= render "admin/pdf_commande/paiements" %> 
+<%= render "admin/pdf_commande/avoirrembs" %> 
+<%= render "admin/pdf_commande/synthese" %> 
