--- a/app/views/admin/commandes/index.html.erb
+++ b/app/views/admin/commandes/index.html.erb
@@ -1,4 +1,4 @@
-<%= bandeau_entete("Commandes", "file-earkmark-fill", @count_commandes, 
+<%= bandeau_entete("Commandes", 'file-earmark-fill', @count_commandes, 
   :nom_or_type_locvente_or_typeevent_cont, admin_commandes_path) %>
 
 <%= bloc_nouveau(Commande) %>
