--- a/app/views/admin/doc_editions/_synthese.html.erb
+++ b/app/views/admin/doc_editions/_synthese.html.erb
@@ -7,7 +7,7 @@
         <span class="fw-bold"> Editer pdf </span>
     <% end %>
 
-    <%= button_to send_email_path(doc_edition: @doc_edition), 
+    <%= button_to admin_send_email_path(doc_edition: @doc_edition), 
           method: :post, class: 'btn w-100 m-1 btn-outline-primary fw-bold' do %>
         <i class="bi bi-envelope-at"></i>
         <span class="fw-bold"> Envoyer mail </span>
