systeme admin vendeur avec authenticate - bonnes views et action devise user ou user admin

--- a/app/views/admin/devise/registrations/new.html.erb
+++ b/app/views/admin/devise/registrations/new.html.erb
@@ -27,7 +27,7 @@
     <% end %>
     
     <div class="my-4">
-      <%= render "devise/shared/links" %>
+      <%= render "admin/devise/shared/links" %>
     </div>
 
 
