--- a/app/views/public/devise/registrations/new.html.erb
+++ b/app/views/public/devise/registrations/new.html.erb
@@ -27,12 +27,9 @@
     <% end %>
     
     <div class="my-4">
-      <%= render "devise/shared/links" %>
+      <%= render "public/devise/shared/links" %>
     </div>
 
-
-
   </div>
-
 
 </div>
