--- a/app/views/admin/home_admin/index.html.erb
+++ b/app/views/admin/home_admin/index.html.erb
@@ -28,13 +28,12 @@
     </div>
   </div>
 
-  <% if user_signed_in? %>
+  <% if current_admin_user %>
       <div class="container-fluid mt-4 d-flex justify-content-end">
-          <%= button_to destroy_user_session_path, method: :delete, data: { turbo_method: :delete }, class: "btn btn-sm btn-danger d-flex align-items-center" do %>
+          <%= button_to destroy_admin_user_session_path, method: :delete, data: { turbo_method: :delete }, class: "btn btn-sm btn-danger d-flex align-items-center" do %>
               <i class="bi bi-box-arrow-left me-1"></i>
-              <span class="fw-bold"><%= current_user.role %> </span>
+              <span class="fw-bold"><%= current_admin_user.role %> </span>
           <% end %>
-
       </div>
   <% end %>
 
