--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -17,7 +17,7 @@
 
     <%= render "admin/shared/gtag" %>
 
-    <%#= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
