--- a/app/views/admin/clients/new.html.erb
+++ b/app/views/admin/clients/new.html.erb
@@ -4,5 +4,5 @@
 
 <br>
 
-<%= return_model_index_button("Clients", clients_path) %>
+<%= return_model_index_button("Clients", admin_clients_path) %>
 
