--- a/app/views/admin/ensembles/show.html.erb
+++ b/app/views/admin/ensembles/show.html.erb
@@ -4,4 +4,4 @@
 
 <hr>
 
-<%= return_model_index_button("Retour vers Ensembles", ensembles_path) %>
+<%= return_model_index_button("Retour vers Ensembles", admin_ensembles_path) %>
