--- a/app/views/admin/etiquettes/_html_links.html.erb
+++ b/app/views/admin/etiquettes/_html_links.html.erb
@@ -2,7 +2,7 @@
 
 <div class="container-fluid d-flex justify-content-between">
 
-    <%= return_model_index_button("Retour vers etiquettes", etiquettes_index_path) %>
+    <%= return_model_index_button("Retour vers etiquettes", admin_etiquettes_index_path) %>
     <%= link_to url_for(prod1: @produit1, prod2: @produit2, prod3: @produit3, prod4: @produit4, format: :pdf), 
         class:"btn m-1 btn-danger",
         title: "Editer étiquette", target: "_blank" do %> 
