--- a/app/views/admin/fournisseurs/show.html.erb
+++ b/app/views/admin/fournisseurs/show.html.erb
@@ -8,4 +8,4 @@
 
 <hr>
 
-<%= return_model_index_button("Retour vers fournisseurs", fournisseurs_path) %>
+<%= return_model_index_button("Retour vers fournisseurs", admin_fournisseurs_path) %>
