--- a/app/views/admin/meetings/new.html.erb
+++ b/app/views/admin/meetings/new.html.erb
@@ -6,4 +6,4 @@
 
 <br>
 
-<%= return_model_index_button("Retour vers rendez-vous", meetings_path) %>
+<%= return_model_index_button("Retour vers rendez-vous", admin_meetings_path) %>
