--- a/app/views/admin/produits/new.html.erb
+++ b/app/views/admin/produits/new.html.erb
@@ -4,4 +4,4 @@
 
 <br>
 
-<%= return_model_index_button("Retour vers produits", produits_path) %>
+<%= return_model_index_button("Retour vers produits", admin_produits_path) %>
