--- a/app/views/admin/meetings/show.html.erb
+++ b/app/views/admin/meetings/show.html.erb
@@ -13,4 +13,4 @@
 
 </div>
 
-<%= return_model_index_button("Retour vers rendez-vous", meetings_path) %>
+<%= return_model_index_button("Retour vers rendez-vous", admin_meetings_path) %>
