--- a/app/views/admin/meetings/new.html.erb
+++ b/app/views/admin/meetings/new.html.erb
@@ -1,6 +1,6 @@
 <%= bandeau_entete_simple("Nouveau rendez-vous", "calendar") %>
 
-<%= render partial: 'meetings/form', locals: { commande_id: nil, client_id: nil, meeting: Meeting.new } %>
+<%= render partial: 'admin/meetings/form', locals: { commande_id: nil, client_id: nil, meeting: Meeting.new } %>
 
 
 
