--- a/app/views/admin/etiquettes/_produit.html.erb
+++ b/app/views/admin/etiquettes/_produit.html.erb
@@ -36,7 +36,7 @@
                   
                   <% else %>
 
-                    <%= link_to etiquettes_path, class: "btn btn-secondary my-4" do %>
+                    <%= link_to admin_etiquettes_path, class: "btn btn-secondary my-4" do %>
                       <span class="fw-bold ms-2"> Limite atteinte</span>
                       <i class="bi fa-tags"></i> 
                     <% end %>
