--- a/app/views/admin/etiquettes/_produit_document.html.erb
+++ b/app/views/admin/etiquettes/_produit_document.html.erb
@@ -1,18 +1,18 @@
 <!-- Section Image -->
-<div class="text-center" style="height: 410px; padding: 10px; box-sizing: border-box; position: relative; overflow: hidden;">
+<div class="text-center" style="height: 510px; padding-top: 20px; padding-right: 20px; padding-left: 20px; box-sizing: border-box; position: relative; overflow: hidden;">
   <div style="width: 100%; height: 100%; background-image: url('<%= produit.image1.present? ? produit.image1.url : no_photo_url %>'); background-size: cover; background-repeat: no-repeat; background-position: center;">
   </div>
 </div>
 
 <!-- Footer Section (Sizes and Colors) -->
-<div style="height: 120px; padding: 5px;">
-    <table style="width: 100%;">
+<div style="height: 70px; padding-left: 5px; padding-right: 5px;">
+    <table style="width: 100%; border-color: white; padding: 0px;">
         <tr>
-            <td style="width: 120px;">
+            <td style="width: 80px; padding: 0px;">
                 <%= image_tag(produit.qr_code, class:"img-fluid") if produit.qr_code.present? %>              
             </td>
 
-            <td style="width: 300px; padding: 10px;">
+            <td style="width: 300px; padding-left: 0px;">
                 <h3 class="bolded text-dark"><%= produit.nom %></h3> 
 
                 <!-- Pricing Section -->
@@ -30,9 +30,10 @@
     </table>
 </div>
 
-<div style="height: 80px; padding: 5px; margin-top: 20px">
+<div style="height: 40px; padding-right: 20px; padding-left: 20px; margin-top: 0px">
 
-    <div>Taille(s): 
+    <div class="mt-2">
+        Taille(s): 
         <% if produit.taille.present? %>
             <span style="border: 2px solid black; border-radius: 5px; margin-right: 2px; padding: 1px;">
                 <%= produit.taille&.nom %>
@@ -44,7 +45,8 @@
             <% end %>
         <% end %>
     </div>
-    <div class="mt-2">Couleur(s): 
+    <div class="mt-1">
+        Couleur(s): 
         <% if produit.couleur.present? %>
             <span style="border: 1px solid black; border-radius: 5px; margin-right: 2px; padding: 2px;">
                 <%= produit.couleur&.nom %>
