--- a/app/views/admin/home_admin/_blocLarge.html.erb
+++ b/app/views/admin/home_admin/_blocLarge.html.erb
@@ -31,7 +31,7 @@
         <%= options_supplementaires_link(admin_tailles_path, "bi-rulers", "Tailles", "btn-outline-secondary") %>
         <%= options_supplementaires_link(admin_admin_parameters_path, "bi-gear", "Parametres", "btn-outline-warning") %>
 
-        <%= options_supplementaires_link(root_url(subdomain: "public"), "bi-house", "Site public", "btn-outline-primary") %>
+        <%= options_supplementaires_link(root_url(subdomain: "shop"), "bi-house", "Site public", "btn-outline-primary") %>
 
 
         <%= link_to admin_home_admin_scan_qr_path, class: "btn btn-sm btn-primary fa fa-bounce" do %>
