--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -65,3 +65,10 @@
    object-fit: cover;
    object-position: center; /* Center the image horizontally when it's taller than the container */
  }
+
+.public-text-overlay {
+  background: rgba(255, 255, 255, 0.7); /* White background with 70% opacity */
+  border-radius: 4px;                  /* Rounded corners */
+  padding: 4px;                  /* Padding for better spacing */
+  width: 80%;
+}
