--- a/app/views/public/pages/home.html.erb
+++ b/app/views/public/pages/home.html.erb
@@ -1,45 +1,23 @@
-<h1>Welcome to Our Public Page</h1>
+<div class="position-relative d-inline-block text-center w-100">
+  <%= image_tag('/images/img1.png', class: 'img-fluid') %>
+  <div class="container-fluid d-flex flex-column justify-content-center align-items-center position-absolute top-50 start-50 translate-middle">
+    <h1 class="public-text-overlay brand-colored fs-1 mb-2 text-uppercase">
+      Notre boutique en ligne
+    </h1>
+    <h2 class="public-text-overlay fs-6">
+      Découvrez une sélection de nos produits
+    </h2>
+  </div>
+</div>
 
-<%= link_to "Produits", produits_path %>
-<%= link_to "About", about_path %>
-
-
-<hr>
-
-current_user: <%= current_user %> <br>
-current_admin_user: <%= current_admin_user %> <br>
-
-<hr>
-
-<% if user_signed_in? %>
-    <div class="container-fluid mt-4 d-flex justify-content-end">
-        <%= button_to destroy_user_session_path, method: :delete, data: { turbo_method: :delete }, class: "btn btn-sm btn-danger d-flex align-items-center" do %>
-            <i class="bi bi-box-arrow-left me-1"></i>
-            <span class="fw-bold"><%= current_user.role %> </span>
-        <% end %>
+<div class="container-fluid my-4">
+    <h3 class="brand-colored"> Notre sélection </h3>
+    <div>
+        Autour D'un Soir c'est avant tout une boutique 100% conseil à Cannes.
+        Nous souhaitons ici vous proposer le meilleur de nos produits à la vente.
     </div>
+</div>
 
-<% elsif current_admin_user %>
-    <div class="container-fluid mt-4 d-flex justify-content-end">
-        <%= button_to destroy_admin_user_session_path, method: :delete, data: { turbo_method: :delete }, class: "btn btn-sm btn-danger d-flex align-items-center" do %>
-            <i class="bi bi-box-arrow-left me-1"></i>
-            <span class="fw-bold"><%= current_admin_user.role %> </span>
-        <% end %>
-    </div>
-<% else %>
-
-    <%= link_to new_user_session_path, class: "btn btn-sm btn-outline-warning" do %>
-        <i class="bi bi-person-lock"></i>
-        <span class="fw-bold">Connexion</span>
-    <% end %>
-
-    <%= link_to new_user_registration_path, class: "btn btn-sm btn-outline-primary" do %>
-        <i class="bi bi-person-add"></i>
-        <span class="fw-bold">Nouveau</span>
-    <% end %>
-
-
+<% @categories.each do |categorie| %>
+    <%= card_categorie(categorie) %>
 <% end %>
-
-<%#= link_to "admin", admin_home_admin_path, class: "btn btn-sm btn-dark" %>
-<%= link_to "admin", admin_root_url(subdomain: "admin"), class: "btn btn-sm btn-dark" %>
